# gazelle_cc

./: BUILD.bazel  MODULE.bazel  README.md  go.mod
.bcr/: README.md  metadata.template.json  presubmit.yaml
.github/workflows/: ci.yaml  publish-to-bcr.yaml  release.yaml  release_prep.sh
example/bzlmod/: BUILD  MODULE.bazel  README.md
example/bzlmod/mylib/: mylib.cc  mylib.h  mylib_test.cc
example/bzlmod/proto/: mock.h
index/internal/collections/: BUILD.bazel
language/cc/: BUILD.bazel  config.go  generate.go  lang.go  platform_strings.go  resolve.go  source_groups.go  source_groups_test.go
language/cc/testdata/index_globs/: BUILD.in  BUILD.out  usage_excluded.cc  usage_lib-ext.cc  usage_lib.cc  usage_private.cc
language/cpp/: bzldep-index.json
language/internal/cc/: BUILD.bazel  expr_eval.go  expr_eval_test.go
language/internal/cc/parser/: BUILD.bazel  expr.go  parser.go  parser_test.go
language/internal/cc/platform/: BUILD.bazel  platforms.go
