load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cc",
    srcs = [
        "config.go",
        "generate.go",
        "lang.go",
        "platform_strings.go",
        "resolve.go",
        "source_groups.go",
    ],
    embedsrcs = [
        "bzldep-index.json",
    ],
    importpath = "github.com/EngFlow/gazelle_cc/language/cc",
    visibility = ["//visibility:public"],
    deps = [
        "//index/internal/collections",
        "//language/internal/cc",
        "//language/internal/cc/parser",
        "//language/internal/cc/platform",
        "@com_github_bazelbuild_buildtools//build",
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//language/proto",
        "@gazelle//pathtools",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
    ],
)

# gazelle:exclude testdata
go_test(
    name = "cc_test",
    srcs = [
        "config_test.go",
        "source_groups_test.go",
    ],
    embed = [":cc"],
    deps = [
        "//language/internal/cc/parser",
        "@com_github_stretchr_testify//require",
    ],
)
