load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parser",
    srcs = [
        "expr.go",
        "parser.go",
    ],
    importpath = "github.com/EngFlow/gazelle_cc/language/internal/cc/parser",
    visibility = ["//language:__subpackages__"],
    deps = ["//language/internal/cc/platform"],
)

go_test(
    name = "parser_test",
    srcs = ["parser_test.go"],
    embed = [":parser"],
    deps = [
        "//language/internal/cc/platform",
        "@com_github_stretchr_testify//assert",
    ],
)
